--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </center>
 
 <div class="copy_right_footer">
-DEVELOPED BY✨ 𝓐𝓝𝓢𝓗𝓤𝓛✨
+DEVELOPED BY ANSHUL
 </div>
 
 <script src="main.js"></script>
