--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body background = "blue">
   <hr>
 <center>
-  <h3 class="btn btn-primary heading">Real Time Image Identification App™
+  <h3 class="btn btn-primary heading">Real Time Image Identification App
     <center>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 heading_div ">
-      *INSANE* APP
+      INSANE APP
         <br>
           <div class="btn heading_div2">
           The model of this app is trained with 1.3 million images
